--- a/src/Components/Home/WhyChooseUs.css
+++ b/src/Components/Home/WhyChooseUs.css
@@ -63,7 +63,7 @@
   bottom: 0;
   width: 100%;
   height: 10px;
-  background-color:yellow;
+  background-color: #ffcc00;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.9s ease-out;
@@ -109,7 +109,7 @@
 .Icon {
   width: 2rem;
   height: 2rem;
-  filter: brightness(0) saturate(100%) invert(80%) sepia(94%) saturate(747%) hue-rotate(6deg) brightness(102%) contrast(101%);
+  /* filter: brightness(0) saturate(100%) invert(80%) sepia(94%) saturate(747%) hue-rotate(6deg) brightness(102%) contrast(101%); */
 }
 
 
